# cluster-api-provider-external

./: .gitignore  .travis.yml  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE
cluster/: clean.sh  deploy.sh
cluster/k8s-1.11.0/: BUILD.bazel
cluster/os-3.10.0/: BUILD.bazel
cluster/os-3.11.0/: BUILD.bazel
clusterctl/: main.go
cmd/external-controller/: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  main.go
cmd/external-controller/cluster-controller-app/: BUILD.bazel  controller.go
cmd/external-controller/cluster-controller-app/options/: BUILD.bazel
cmd/external-controller/machine-controller-app/: BUILD.bazel  controller.go
cmd/external-controller/machine-controller-app/options/: BUILD.bazel
cmd/fence-provision-manager/: BUILD.bazel  Dockerfile  build-push-fence-agents.sh  build.sh
cmd/fence-provision-manager/ansible/roles/power/tasks/: create.yml  delete.yml  deprovision.yml  discover.yml  provision.yml  status.yml
cmd/fence-provision-manager/cmd/: BUILD.bazel  ansible.go  fence.go  root.go
cmd/fencing-agents/: BUILD.bazel  build.sh  main.go
cmd/fencing-agents/cmd/: BUILD.bazel  fence.go  root.go
cmd/generate-image/: BUILD.bazel
cmd/manager/: BUILD.bazel  main.go
cmd/manager/ansible/: BUILD.bazel  ansible.cfg
cmd/manager/ansible/roles/power/tasks/: delete.yml  main.yml  status.yml
examples/: crd.yaml  demo-ipmi.yaml  demo-setup.yaml  demo.yaml  machines.yaml  rbac.yaml
examples/agents/: Dockerfile  Makefile
examples/rbac/: cluster-role-binding-template.yaml  cluster-role-template.yaml  create_role.sh  role-template.yaml
hack/: common.sh  dockerized  update-codegen.sh
hack/docker-builder/: build.sh  publish.sh
manifests/: BUILD.bazel  cluster-api-external-provider.yaml.in  rbac.yaml.in
manifests/crds/: cluster.yaml.in  machine.yaml.in  machinedeployment.yaml.in  machineset.yaml.in
manifests/demo/: machine-setup-config.yaml
manifests/examples/: cluster.yaml  machine-setup-config.yaml  machine.yaml  secret.yaml
pkg/actuators/baremetal/machine/: BUILD.bazel  actuator.go
pkg/actuators/baremetal/machine/utils/: BUILD.bazel  command.go
pkg/apis/: BUILD.bazel  addtoscheme_baremetalproviderconfig_v1alpha1.go
pkg/apis/baremetalproviderconfig/: BUILD.bazel  group.go
pkg/apis/baremetalproviderconfig/v1alpha1/: BUILD.bazel  baremetalproviderconfig_types.go  doc.go  register.go  zz_generated.deepcopy.go
pkg/apis/providerconfig/v1alpha1/: types.go  zz_generated.deepcopy.go
pkg/controller/: BUILD.bazel  add_machine.go
