load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/kubevirt/cluster-api-provider-external",
)

load(
     "@io_bazel_rules_docker//container:container.bzl",
     "container_bundle",
     container_repositories = "repositories",
 )

 container_bundle(
     name = "controller_images",
     images = {
         "docker.io/cluster-api-provider-ext:devel": "//cmd/external-controller:controller_image",
     },
 )