load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "kubevirt.io/cluster-api-provider-external",
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

config_setting(
    name = "release",
    values = {"define": "release=true"},
)

container_bundle(
    name = "cluster_api_external_provider_images",
    images = {
        "index.docker.io/kubevirt/cluster-api-external-provider:latest": "//cmd/external-controller:cluster_api_external_provider_image",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_images",
    bundle = select({
        ":release": ":cluster_api_external_provider_images",
    }),
)
