load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "kubevirt.io/cluster-api-provider-external",
)

load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

passwd_entry(
    name = "nonroot_user",
    home = "/home/non-root",
    shell = "/bin/bash",
    uid = 1001,
    gid = 1001,
    username = "non-root",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nonroot_user",
    ],
)

pkg_tar(
    name = "passwd_tar",
    srcs = [":passwd"],
    mode = "0644",
    package_dir = "etc",
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

config_setting(
    name = "release",
    values = {"define": "release=true"},
)

container_bundle(
    name = "cluster_api_provider_baremetal_images",
    images = {
        "index.docker.io/alukiano/origin-baremetal-machine-controllers:$(container_tag)": "//cmd/manager:baremetal_manager_image",
    },
)

load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

docker_push(
    name = "push_images",
    bundle = select({
        "//cluster/k8s-1.11.0:cluster_provider_k8s_1_11_0": "//cluster/k8s-1.11.0:cluster_api_provider_baremetal_images",
        "//cluster/os-3.10.0:cluster_provider_os_3_10_0": "//cluster/os-3.10.0:cluster_api_provider_baremetal_images",
        ":release": ":cluster_api_provider_baremetal_images",
    }),
)
