load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

container_bundle(
    name = "clusterapi_external_provider_images",
    images = {
        "localhost:33000/cluster-api-provider-external:devel": "//cmd/external-controller:cluster_api_provider_external_image",
        "localhost:33000/kubevirt/fencing-agents:devel": "//cmd/fencing-agents:fencing-agents-image",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "cluster_provider_k8s_1_11_0",
    define_values = {
        "dev": "true",
        "cluster_provider": "k8s_1_11_0",
    },
)
