load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_bundle",
    container_repositories = "repositories",
)

container_bundle(
    name = "cluster_api_provider_baremetal_images",
    images = {
        "localhost:33000/kubevirt/origin-baremetal-machine-controllers:devel": "//cmd/manager:baremetal_manager_image",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "cluster_provider_k8s_1_11_0",
    define_values = {
        "dev": "true",
        "cluster_provider": "k8s_1_11_0",
    },
)
