load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/cluster-api-provider-external/cmd/manager",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/actuators/baremetal/machine:go_default_library",
        "//pkg/apis:go_default_library",
        "//pkg/controller:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth/gcp:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/client/clientset_generated/clientset:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/signals:go_default_library",
    ],
)

go_binary(
    name = "machine-controller-manager",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    container_repositories = "repositories",
)

container_image(
    name = "passwd_image",
    base = "@fence-provision-base//image",
    tars = [
        "//:passwd_tar",
        "//cmd/manager/ansible:ansible_tar",
    ],
    visibility = ["//visibility:private"],
)

container_image(
    name = "baremetal_manager_image",
    base = ":passwd_image",
    files = [
        ":machine-controller-manager",
        "//vendor/sigs.k8s.io/cluster-api/cmd/manager:manager",
        "//cmd/manager/ansible:ansible.cfg",
    ],
    directory = "/",
    user = "65534",
    visibility = ["//visibility:public"],
)
