load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_machine.go",
        "controller.go",
    ],
    importpath = "kubevirt.io/cluster-api-provider-external/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/actuators/baremetal/machine:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/machine:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
    ],
)
