load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "ansible_files",
    srcs = glob([
        "**/*.yml",
        "*.yml",
    ]),
)

pkg_tar(
    name = "ansible_tar",
    srcs = [":ansible_files"],
    package_dir = "/ansible",
    strip_prefix = ".",
    owner = "65534.65534",
    mode = "0700",
    visibility = ["//visibility:public"],
)

exports_files([
    "ansible.cfg",
    "inventory",
])
