load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["command.go"],
    importpath = "kubevirt.io/cluster-api-provider-external/pkg/actuators/baremetal/machine/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/baremetalproviderconfig/v1alpha1:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
    ],
)
